3.0.29
	+ Pinning kernels so they are updated with QA updates active
	+ Fix warning on last inside an eval on automatic-conf-backup script
3.0.28
	+ Update support information due to offer 2013
	+ Update messages in info models
	+ Show ad messages in SubscriptionInfo model
	+ Remove useless code due to offer 2013
	+ Retrieve the maximum users from Zentyal Remote
	+ Added new i18n editions
	+ Store an ad message instead of enforcing max number of users
	  in the registration check
	+ Now the module has support to store ad messages
	+ Widget recovers from latestRemoteConfBackup connection errors
	+ Missing use when restarting monitor using VPN as communication
	  layer
3.0.27
	+ Honor system-wide defined HTTP Proxy in REST client
3.0.26
	+ Better error if we cannot register due to lack of free space
	+ Fix links to see latest reports or its documentation on Reports tab
	+ Set proper URL to reach Zentyal Remote dashboard from dashboard
3.0.25
	+ Removed implementation of the removed Desktop::ServiceProvider
	+ Retry making the configuration backup if the conf backup process
	  produced a corrupted backup
	+ Send the checksum of the conf backup when pushing to check
	  its integrity on server side
	+ Explicitly set firewall version dependency in control file
3.0.24
	+ Adapt firewall rules to new accept chains
3.0.23
	+ Display web remote access support settings
	+ Save logs module when creating VPN client to start logging its log
	+ Save software module after setting QA updates configuration
	+ Small correction on a link that were still pointing to Cloud
	+ Support running runnerd without being registered programatically
	+ Give support to custom proxied redirections to provide local HTTP
	  servers from Zentyal Remote using
	  /etc/zentyal/remoteservices_redirections.yaml
	+ Fixed path escape on Reporter::SambaDiskUsage
3.0.22
	+ maxUsers method does not take maxCloudUsers into account
	+ Custom QA archive can be set at qa_updates_archive configuration
	  key
3.0.21