@@ -8,12 +8,12 @@ Standards-Version: 3.9.2
 Package: zentyal-remoteservices
 Architecture: all
 Replaces: ebox-remoteservices (<< 2.0.100)
-Depends: zentyal-core (>= 3.0.25), zentyal-core (<< 3.0.100), zentyal-monitor (>= 3.0.1),
+Depends: zentyal-core (>= 3.0.25), zentyal-core (<< 3.0.100), zentyal-network (>= 3.0.15), zentyal-monitor (>= 3.0.1),
  zentyal-firewall (>= 3.0.5), zentyal-openvpn, zentyal-software, libarchive-tar-perl, libsoap-lite-perl, libnet-dns-perl,
  liblinux-inotify2-perl, libdigest-sha-perl, libdate-calc-perl, libtext-csv-perl, screen,
  john (>= 1.7.6), libapt-pkg-perl, apache2 (>= 2.2.14-5ubuntu8.2), curl, at, libwww-perl,
  libfile-copy-recursive-perl, libossp-uuid-perl, apt-transport-https, ocsinventory-agent,
- pciutils, dmidecode, ${misc:Depends}
+ pciutils, dmidecode, liblwp-protocol-connect-perl, ${misc:Depends}
 Description: Zentyal - Cloud Client
  Zentyal is a Linux small business server that can act as
  a Gateway, Unified Threat Manager, Office Server, Infrastructure
