@@ -1,3 +1,5 @@
+HEAD
+	+ Fixes to allow proxy in REST calls
 3.0.29
 	+ Pinning kernels so they are updated with QA updates active
 	+ Fix warning on last inside an eval on automatic-conf-backup script
